<resources>
    <string name="app_name">ZippyPark</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up!</string>
    <string name="create_account">Create a New Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_num">Phone Number</string>
    <string name="license_num">License Plate #</string>
    <string name="registration_num">Registration #</string>
    <string name="basic_info">Basic Info</string>
    <string name="vehicle_info">Vehicle Info</string>
    <string name="payment_info">Payment Info</string>
    <string name="credit_card_type">Credit Card Type</string>
    <string name="credit_card_num">Credit Card #</string>
    <string name="exp_date">Expiration Date</string>
    <string name="cvv">CVV</string>
    <string name="next">Next</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="welcome">Welcome, user!</string>
    <string name="view_profile">View Profile</string>
    <string name="view_reservations">Current\nReservations</string>
    <string name="reservation_history">Reservation\nHistory</string>
    <string name="create_reservation">Create\nReservation</string>
    <string name="profile">Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="barcode">Barcode</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_msg">Your account has been deleted.</string>
    <string name="close">Close</string>
    <string name="edit_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="create_button">Create Reservation</string>
    <string name="reservation_heading">Reservation</string>
    <string name="create_res">Create Reservation</string>
    <string name="current_reservation">Current Reservations</string>
    <string name="edit_reservations">Edit Reservation</string>
    <string name="reservation_date">0000-00-00</string>
    <string name="date">Date</string>
    <string name="time">00:00:00 AM</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="res_history">Reservation History</string>
    <string name="handicap">Handicap Status</string>
    <string-array name="handicap_options">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string name="home">Home</string>
    <string name="points">Points</string>
    <string name="first_name_info">First Name: </string>
    <string name="last_name_info">Last Name: </string>
    <string name="email_info">Email: </string>
    <string name="phone_num_info">Phone Number: </string>
    <string name="password_info">Password: </string>
    <string name="license_num_info">License Plate #: </string>
    <string name="registration_num_info">Registration #: </string>
    <string name="credit_card_type_info">Credit Card Type: </string>
    <string name="credit_card_num_info">Credit Card #: </string>
    <string name="exp_date_info">Expiration Date: </string>
    <string name="cvv_info">CVV: </string>
    <string name="points_info">Points: </string>
    <string name="handicap_info">Handicap Status: </string>
</resources>
