<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30sp">

    <TextView
        android:id="@+id/zippy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toTopOf="@id/create_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_account"
        android:textColor="@color/text"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="69dp"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintTop_toBottomOf="@id/zippy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="440sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10sp"
                android:textStyle="bold"
                android:text="@string/basic_info"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="69dp" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_margin="10sp"
                android:background="@drawable/cutom_edit_text"
                android:padding="10sp"
                android:textColorHint="@color/hint"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_margin="10sp"
                android:hint="@string/last_name"
                android:background="@drawable/cutom_edit_text"
                android:padding="10sp"
                android:textColorHint="@color/hint"/>

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:layout_margin="10sp"
                android:hint="@string/email"
                android:background="@drawable/cutom_edit_text"
                android:padding="10sp"
                android:textColorHint="@color/hint"/>

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:inputType="phone"
                android:layout_margin="10sp"
                android:hint="@string/phone_num"
                android:background="@drawable/cutom_edit_text"
                android:padding="10sp"
                android:textColorHint="@color/hint"/>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:layout_margin="10sp"
                android:hint="@string/password"
                android:background="@drawable/cutom_edit_text"
                android:padding="10sp"
                android:textColorHint="@color/hint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10sp"
                android:textStyle="bold"
                android:text="@string/handicap"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="69dp" />

            <Spinner
                android:id="@+id/handicapSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10sp"
                android:layout_marginTop="20sp"
                android:textStyle="bold"
                android:text="@string/vehicle_info"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="69dp" />

            <EditText
                android:id="@+id/licenseNumEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_margin="10sp"
                android:background="@drawable/cutom_edit_text"
                android:padding="10sp"
                android:textColorHint="@color/hint"
                android:hint="@string/license_num" />

            <EditText
                android:id="@+id/registrationNumEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_margin="10sp"
                android:hint="@string/registration_num"
                android:background="@drawable/cutom_edit_text"
                android:padding="10sp"
                android:textColorHint="@color/hint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10sp"
                android:layout_marginTop="20sp"
                android:textStyle="bold"
                android:text="@string/payment_info"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="69dp" />

            <EditText
                android:id="@+id/creditCardTypeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_margin="10sp"
                android:background="@drawable/cutom_edit_text"
                android:padding="10sp"
                android:textColorHint="@color/hint"
                android:hint="@string/credit_card_type" />

            <EditText
                android:id="@+id/creditCardNumEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_margin="10sp"
                android:hint="@string/credit_card_num"
                android:background="@drawable/cutom_edit_text"
                android:padding="10sp"
                android:textColorHint="@color/hint"/>


            <!--<EditText
                android:id="@+id/expDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_margin="10sp"
                android:inputType="date"
                android:hint="@string/exp_date"
                android:background="@drawable/cutom_edit_text"
                android:padding="10sp"
                android:textColorHint="@color/hint"/>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10sp"
                android:layout_marginTop="20sp"
                android:text="@string/exp_date"
                android:textColor="@color/hint"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="69dp" />
            
            <DatePicker
                android:id="@+id/expDateEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"/>


            <EditText
                android:id="@+id/cvvEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_margin="10sp"
                android:hint="@string/cvv"
                android:background="@drawable/cutom_edit_text"
                android:padding="10sp"
                android:textColorHint="@color/hint"/>

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_gravity="center"
                android:background="@color/hint"
                android:textColor="@color/colorPrimary"
                android:text="@string/next"/>

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimary"
                android:text="@string/cancel"/>




        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>