<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30sp">

    <TextView
        android:id="@+id/zippy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/modify_reservations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/reservation_heading"
        android:textColor="@color/text"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="69dp"
        app:layout_constraintTop_toBottomOf="@id/zippy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10sp"
            android:layout_marginTop="150dp"
            android:textStyle="bold"
            android:text="@string/edit_reservations"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="69dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="69dp" />


        <EditText
            android:id="@+id/reservationDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_margin="10sp"
            android:background="@drawable/cutom_edit_text"
            android:padding="10sp"
            android:textColorHint="@color/hint"
            android:hint="@string/reservation_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10dp"
            android:text="@string/start_time"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="69dp" />

        <EditText
            android:id="@+id/startTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_margin="10sp"
            android:background="@drawable/cutom_edit_text"
            android:padding="10sp"
            android:textColorHint="@color/hint"
            android:hint="@string/time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10dp"
            android:text="@string/end_time"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="69dp" />

        <EditText
            android:id="@+id/EndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_margin="10sp"
            android:background="@drawable/cutom_edit_text"
            android:padding="10sp"
            android:textColorHint="@color/hint"
            android:hint="@string/time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="75dp"
                android:background="@color/hint"
                android:textColor="@color/colorPrimary"
                android:text="@string/edit_button"/>

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="80dp"
                android:background="@color/hint"
                android:textColor="@color/colorPrimary"
                android:text="@string/delete_button"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

