<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30sp">

    <TextView
        android:id="@+id/zippy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toTopOf="@id/barcode_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/barcode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/barcode"
        android:textColor="@color/text"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="69dp"
        app:layout_constraintBottom_toTopOf="@id/closeButton"
        app:layout_constraintTop_toBottomOf="@id/zippy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/barcode_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="[insert auto-generated number]"
        android:textColor="@color/text"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="69dp"
        app:layout_constraintBottom_toTopOf="@id/closeButton"
        app:layout_constraintTop_toBottomOf="@id/barcode_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/hint"
        android:textColor="@color/colorPrimary"
        android:text="@string/close"/>
</android.support.constraint.ConstraintLayout>